After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690760 - Initialize GStreamer at startup
Initialize GStreamer at startup
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: shell
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-27 02:30 UTC by Giovanni Campagna
Modified: 2013-01-02 15:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Initialize GStreamer at startup (890 bytes, patch)
2012-12-27 02:30 UTC, Giovanni Campagna
needs-work Details | Review
user-accounts: Fix crash when built with cheese support (1.08 KB, patch)
2013-01-02 15:54 UTC, Bastien Nocera
committed Details | Review

Description Giovanni Campagna 2012-12-27 02:30:06 UTC
The user-accounts panel requires GStreamer through cheese, and segfaults
if it is not initialized.
Comment 1 Giovanni Campagna 2012-12-27 02:30:09 UTC
Created attachment 232256 [details] [review]
Initialize GStreamer at startup
Comment 2 Rui Matos 2012-12-27 19:02:20 UTC
Can we initialize gstreamer on that panel's init method instead so as to not unnecessarily delay our launch time?
Comment 3 Giovanni Campagna 2012-12-27 19:11:20 UTC
Uhm... Is gst_init() doing sync IO? It should only mmap the registry and load base plugins.
Also, it is better to delay panel construction or control center startup? I'd say the latter, because it is covered by startup notification, while the former has no form of feedback while happening.
Comment 4 Bastien Nocera 2013-01-02 15:46:40 UTC
Review of attachment 232256 [details] [review]:

We need to initialise clutter as well actually.
Comment 5 Bastien Nocera 2013-01-02 15:54:36 UTC
Created attachment 232531 [details] [review]
user-accounts: Fix crash when built with cheese support

The cheese support needs clutter, GStreamer and clutter-gst initialised.
Call cheese_gtk_init() for that.
Comment 6 Bastien Nocera 2013-01-02 15:54:56 UTC
Attachment 232531 [details] pushed as 45d4944 - user-accounts: Fix crash when built with cheese support