user-accounts: Fix crash when built with cheese support

The cheese support needs clutter, GStreamer and clutter-gst initialised.
Call cheese_gtk_init() for that.

https://bugzilla.gnome.org/show_bug.cgi?id=690760